--- a/Backend/jsconfig.json
+++ b/Backend/jsconfig.json
@@ -2,5 +2,5 @@
     "compilerOptions": {
         "moduleResolution" : "node"
     },
-    "include": ["src", "../Backend/src/Data.js"]
+    "include": ["src",]
 }
