--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.8.2",
+    "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.5"
   },
