--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,8 +18,10 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
+    "foodmine": "file:..",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
+    "multer": "^2.0.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.3",
     "openai": "^5.1.1",
